# Cpp-seminars-2026

./: .gitignore  CMakeLists.txt  LICENSE  README.md
01_sem/: CMakeLists.txt
01_sem/02_task/: main  main.cpp
01_sem/03_task/: main.cpp
01_sem/04_task/: main.cpp
01_sem/05_task/: main.cpp
01_sem/06_task/: main.cpp
01_sem/07_task/: main.cpp
01_sem/08_task/: main.cpp
03_sem/: CMakeLists.txt
03_sem/01_task/: main.cpp
03_sem/02_task/: main.cpp
03_sem/03_task/: main.cpp
03_sem/04_task/: main.cpp
03_sem/05_task/: main.cpp
03_sem/06_task/: main.cpp
03_sem/07_task/: main.cpp
03_sem/08_task/: main.cpp
04_sem/: CMakeLists.txt
04_sem/01_task/: main.cpp
04_sem/02_task/: main.cpp
04_sem/03_task/: main.cpp
04_sem/04_task/: main.cpp
04_sem/05_task/: main  main.cpp
04_sem/06_task/: main.cpp
04_sem/07_task/: main.cpp
04_sem/08_task/: main  main.cpp
05_sem/: CMakeLists.txt
05_sem/01_task/: main.cpp
05_sem/02_task/: main.cpp
05_sem/03_task/: main.cpp
05_sem/04_task/: main.cpp
05_sem/05_task/: main.cpp
05_sem/06_task/: main.cpp
05_sem/07_task/: main  main.cpp
05_sem/08_task/: main.cpp
05_sem/09_task/: main  main.cpp
06_sem/: CMakeLists.txt
06_sem/01_task/: main.cpp
06_sem/02_task/: main.cpp
06_sem/03_task/: main.cpp
06_sem/04_task/: main.cpp
06_sem/05_task/: main.cpp
06_sem/how_to_cmake/: CMakeLists.txt  desktop.ini  main.cpp
07_lec/: CMakeLists.txt
07_lec/01example/: main  main.cpp
07_lec/02example/: main  main.cpp
07_lec/03example/: main  main.cpp
07_lec/04example/: main.cpp
07_lec/05example/: main.cpp
07_lec/06example/: main.cpp
07_lec/07example/: main.cpp
07_lec/08example/: main.cpp
07_lec/09example/: main.cpp
07_sem/: CMakeLists.txt
07_sem/01_exercise/: main  main.cpp
07_sem/01_task/: main.cpp
07_sem/02_exercise/: main.cpp  main.i  main.s
07_sem/02_task/: app  main.cpp  task_07_02_sem_task
07_sem/03_exercise/: main  main.cpp
07_sem/03_task/: array_utils.cpp  main.cpp
07_sem/04_exercise/: main.cpp
07_sem/05_exercise/: main.cpp
07_sem/07_exercise/: main.cpp
07_sem/08_exercise/: main.cpp
07_sem/09_exercise/: main
07_sem/10_exercise/: main  main.cpp
08_lec/: CMakeLists.txt
08_lec/01example/: main  main.cpp
08_lec/02example/: main.cpp
08_lec/03example/: main  main.cpp
08_lec/04example/: main  main.cpp
08_lec/05example/: main.cpp
08_lec/06example/: main  main.cpp
08_lec/07example/: main.cpp
08_lec/08example/: main.cpp
08_lec/09example/: main  main.cpp
08_lec/10example/: main  main.cpp
08_lec/11example/: main  main.cpp
08_lec/12example/: main  main.cpp  output.txt
08_lec/13example/: main  main.cpp  output.txt
09_lec/: CMakeLists.txt
09_lec/01example/: main  main.cpp
09_lec/02example/: main  main.cpp
09_lec/03example/: main.cpp
09_lec/04example/: main.cpp
09_lec/05example/: main  main.cpp
09_lec/06example/: main.cpp
09_lec/08example/: main.cpp
09_lec_ead/: CMakeLists.txt
09_lec_ead/01example/: main  main.cpp
09_lec_ead/02example/: main  main.cpp
09_lec_ead/03example/: app  main  main.cpp
09_lec_ead/04example/: main  main.cpp
09_lec_ead/05example/: main  main.cpp
09_lec_ead/06example/: main.cpp
09_lec_ead/07example/: main  main.cpp
10_lec/: CMakeLists.txt
10_lec/01example/: input.txt  main  main.cpp
10_lec/02example/: main  main.cpp
10_lec/03example/: main  main.cpp
10_lec/04example/: main  main.cpp
10_lec/05example/: main.cpp
10_lec/06example/: main  main.cpp
10_lec/07example/: main.cpp
10_lec/08example/: main.cpp
10_lec/09example/: output.txt
10_lec/10example/: main  main.cpp
11_sem/: CMakeLists.txt
11_sem/01task/: main.cpp
11_sem/02task/: input.txt  main.cpp
11_sem/03task/: main.cpp
11_sem/04task/: input.txt  main.cpp
11_sem/07task/: input.txt  main.cpp
11_sem/09task/: main.cpp
12_lec/: CMakeLists.txt
12_lec/01example/: main.cpp
12_lec/02example/: main.cpp
12_lec/03example/: main.cpp
12_lec/04example/: main.cpp
12_lec/05example/: main.cpp
12_lec/06example/: main.cpp
12_lec/08example/: main.cpp
12_lec/10example/: main.cpp
13_lec/: CMakeLists.txt
13_lec/01example/: main.cpp
13_lec/02example/: main.cpp
13_lec/03example/: main.cpp
13_lec/04example/: main.cpp
13_lec/05example/: main.cpp
13_lec/07example/: main.cpp
13_lec/10example/: main.cpp
13_sem/: CMakeLists.txt
13_sem/01example/: main.cpp
13_sem/01task/: main.cpp
13_sem/02example/: main  main.cpp
13_sem/02task/: main.cpp
13_sem/03task/: main.cpp
13_sem/04task/: main.cpp
13_sem/08task/: main
14_lec/: CMakeLists.txt
14_lec/01example/: main.cpp  point.cpp  point.h
14_lec/03example/: main.cpp
14_lec/08example/: main.cpp
14_lec/09example/: main.cpp
14_sem/: CMakeLists.txt
14_sem/01example/: main.cpp  point.cpp  point.h
14_sem/01task/: main  main.cpp
14_sem/02task/: vector.cpp
14_sem/03task/: main.cpp
14_sem/04task/: main.cpp
14_sem/07task/: input.txt
14_sem/09task/: main.cpp
15_lec/: CMakeLists.txt
15_lec/01example/: main.cpp  point.cpp  point.h
15_lec/02example/: main.cpp
15_lec/03example/: main  main.cpp
15_lec/06example/: main.cpp
15_lec/09example/: main.cpp
15_sem/: CMakeLists.txt
15_sem/01task/: date.h  main.cpp
15_sem/02task/: main.cpp
15_sem/03task/: point.h
15_sem/06task/: main.cpp
15_sem/07task/: main.cpp
16_lec/: CMakeLists.txt
16_lec/01example/: main  main.cpp
16_lec/02example/: main.cpp
16_lec/03example/: main.cpp
16_lec/04example/: main.cpp
16_lec/06example/: main
16_lec/08example/: main.cpp
16_lec/09example/: main.cpp
16_lec/10example/: main.cpp
16_lec/11example/: main.cpp
16_lec/12example/: main  main.cpp
16_sem/: CMakeLists.txt
16_sem/01example/: main
16_sem/01task/: date.cpp  main.cpp
16_sem/02task/: main.cpp  vector.h
16_sem/05task/: main.cpp
16_sem/08task/: main.cpp
16_sem/09task/: main  main.cpp
17_lec/: CMakeLists.txt
17_lec/01example/: main
17_lec/03example/: main.cpp
18_2_lec/: CMakeLists.txt
18_lec/: CMakeLists.txt
18_sem/: CMakeLists.txt
19_lec/: CMakeLists.txt
(+172 files in other folders)
