cmake_minimum_required(VERSION 3.10)
project(cpp_sem_eda_compds_2026)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(01_sem)
add_subdirectory(02_sem)
add_subdirectory(03_sem)
add_subdirectory(04_sem)
add_subdirectory(05_sem)
add_subdirectory(06_sem)
add_subdirectory(07_lec)
add_subdirectory(07_sem)