add_executable(task_05_01 01_task/main.cpp)
add_executable(task_05_02 02_task/main.cpp)
add_executable(task_05_03 03_task/main.cpp)
add_executable(task_05_04 04_task/main.cpp)
add_executable(task_05_05 05_task/main.cpp)
add_executable(task_05_06 06_task/main.cpp)
add_executable(task_05_07 07_task/main.cpp)
add_executable(task_05_08 08_task/main.cpp)
add_executable(task_05_09 09_task/main.cpp)
