add_executable(task_07_01 01example/main.cpp)
add_executable(task_07_02 02example/main.cpp)
add_executable(task_07_03 03example/main.cpp)
add_executable(task_07_04 04example/main.cpp)
add_executable(task_07_05 05example/main.cpp)
add_executable(task_07_06 06example/main.cpp)
add_executable(task_07_07 07example/main.cpp)
add_executable(task_07_08 08example/main.cpp)
add_executable(task_07_09 09example/main.cpp)