add_executable(task_08_01 01example/main.cpp)
add_executable(task_08_02 02example/main.cpp)
add_executable(task_08_03 03example/main.cpp)
add_executable(task_08_04 04example/main.cpp)
add_executable(task_08_05 05example/main.cpp)
add_executable(task_08_06 06example/main.cpp)
add_executable(task_08_07 07example/main.cpp)
add_executable(task_08_08 08example/main.cpp)
add_executable(task_08_09 09example/main.cpp)
add_executable(task_08_10 10example/main.cpp)
add_executable(task_08_11 11example/main.cpp)
add_executable(task_08_12 12example/main.cpp)
add_executable(task_08_13 13example/main.cpp)