add_compile_options(-Wpedantic)
add_executable(task_10_01 01example/main.cpp)
add_executable(task_10_02 02example/main.cpp)
add_executable(task_10_03 03example/main.cpp)
add_executable(task_10_04 04example/main.cpp)
add_executable(task_10_05 05example/main.cpp)
add_executable(task_10_06 06example/main.cpp)
add_executable(task_10_07 07example/main.cpp)
add_executable(task_10_08 08example/main.cpp)