add_compile_options(-Wpedantic)
add_executable(task_11_01s 01task/main.cpp)
add_executable(task_11_02s 02task/main.cpp)
add_executable(task_11_03s 03task/main.cpp)
add_executable(task_11_04s 04task/main.cpp)
add_executable(task_11_05s 05task/main.cpp)
add_executable(task_11_06s 06task/main.cpp)
add_executable(task_11_07s 07task/main.cpp)
add_executable(task_11_08s 08task/main.cpp)