add_compile_options(-Wpedantic)
add_executable(task_12_01 01example/main.cpp)
add_executable(task_12_02 02example/main.cpp)
add_executable(task_12_03 03example/main.cpp)
add_executable(task_12_04 04example/main.cpp)
add_executable(task_12_05 05example/main.cpp)
add_executable(task_12_06 06example/main.cpp)
add_executable(task_12_07 07example/main.cpp)
add_executable(task_12_08 08example/main.cpp)
add_executable(task_12_09 09example/main.cpp)