add_compile_options(-Wpedantic)
add_executable(task_13_01 01example/main.cpp)
add_executable(task_13_02 02example/main.cpp)
add_executable(task_13_03 03example/main.cpp)
add_executable(task_13_04 04example/main.cpp)
add_executable(task_13_05 05example/main.cpp)
add_executable(task_13_06 06example/main.cpp)
add_executable(task_13_07 07example/main.cpp)
add_executable(task_13_08 08example/main.cpp)
add_executable(task_13_09 09example/main.cpp)
add_executable(task_13_10 10example/main.cpp)