add_compile_options(-Wpedantic)
add_executable(task_13_01s 01task/main.cpp)
add_executable(task_13_02s 02task/main.cpp)
add_executable(task_13_03s 03task/main.cpp)
add_executable(task_13_04s 04task/main.cpp)
add_executable(task_13_05s 05task/main.cpp)
add_executable(task_13_06s 06task/main.cpp)
add_executable(task_13_07s 07task/main.cpp)
add_executable(task_13_08s 08task/main.cpp)
add_executable(example_13_01 01example/main.cpp)