add_compile_options(-Wpedantic)
add_executable(task_14_01 01example/main.cpp 01example/point.cpp)
add_executable(task_14_02 02example/main.cpp)
add_executable(task_14_03 03example/main.cpp)
add_executable(task_14_04 04example/main.cpp)
add_executable(task_14_05 05example/main.cpp)
add_executable(task_14_06 06example/main.cpp)
add_executable(task_14_07 07example/main.cpp)
add_executable(task_14_08 08example/main.cpp)
add_executable(task_14_09 09example/main.cpp)
add_executable(task_14_10 10example/main.cpp)