add_compile_options(-Wpedantic)
add_executable(task_14_01s 01task/main.cpp)
add_executable(task_14_02s 02task/main.cpp 02task/point.cpp)
add_executable(task_14_03s 03task/main.cpp 03task/point.cpp)
add_executable(task_14_04s 04task/main.cpp)
add_executable(task_14_05s 05task/main.cpp)
add_executable(task_14_06s 06task/main.cpp)
add_executable(task_14_07s 07task/main.cpp)
add_executable(task_14_08s 08task/main.cpp)
add_executable(example_14_01 01example/main.cpp 01example/point.cpp)