add_compile_options(-Wpedantic)
add_executable(task_15_01 01example/main.cpp 01example/point.cpp)
add_executable(task_15_02 02example/main.cpp)
add_executable(task_15_03 03example/main.cpp)
add_executable(task_15_04 04example/main.cpp)
add_executable(task_15_05 05example/main.cpp)
add_executable(task_15_06 06example/main.cpp)
add_executable(task_15_07 07example/main.cpp)
add_executable(task_15_08 08example/main.cpp)
add_executable(task_15_09 09example/main.cpp)
add_executable(task_15_10 10example/main.cpp)