add_compile_options(-Wpedantic)
add_executable(task_15_01s 01task/main.cpp 01task/date.cpp)
add_executable(task_15_02s 02task/main.cpp 02task/point.cpp)
add_executable(task_15_03s 03task/main.cpp 03task/point.cpp)
add_executable(task_15_04s 04task/main.cpp)
add_executable(task_15_05s 05task/main.cpp)
add_executable(task_15_06s 06task/main.cpp)
add_executable(task_15_07s 07task/main.cpp)
add_executable(task_15_08s 08task/main.cpp)
add_executable(example_15_01 01example/main.cpp)