add_compile_options(-Wpedantic)
add_executable(task_16_01 01example/main.cpp)
add_executable(task_16_02 02example/main.cpp)
add_executable(task_16_03 03example/main.cpp)
add_executable(task_16_04 04example/main.cpp)
add_executable(task_16_05 05example/main.cpp)
add_executable(task_16_06 06example/main.cpp)
add_executable(task_16_07 07example/main.cpp)
add_executable(task_16_08 08example/main.cpp)
add_executable(task_16_09 09example/main.cpp)
add_executable(task_16_10 10example/main.cpp)