add_compile_options(-Wpedantic)
add_executable(task_17_01 01example/main.cpp)
add_executable(task_17_02 02example/main.cpp)
add_executable(task_17_03 03example/main.cpp)
add_executable(task_17_04 04example/main.cpp)
add_executable(task_17_05 05example/main.cpp)
add_executable(task_17_06 06example/main.cpp)
add_executable(task_17_07 07example/main.cpp)
add_executable(task_17_08 08example/main.cpp)
add_executable(task_17_09 09example/main.cpp)
add_executable(task_17_10 10example/main.cpp)
add_executable(task_17_11 11example/main.cpp)
add_executable(task_17_12 12example/main.cpp)
add_executable(task_17_13 13example/main.cpp)
add_executable(task_17_14 14example/main.cpp)
add_executable(task_17_15 15example/main.cpp)
add_executable(task_17_16 16example/main.cpp)
add_executable(task_17_17 17example/main.cpp)
add_executable(task_17_18 18example/main.cpp)
add_executable(task_17_19 19example/main.cpp)
add_executable(task_17_20 20example/main.cpp)
add_executable(task_17_21 21example/main.cpp)
add_executable(task_17_22 22example/main.cpp)
add_executable(task_17_23 23example/main.cpp)
add_executable(task_17_24 24example/main.cpp)