add_compile_options(-Wpedantic)
add_executable(task_182_01 01example/main.cpp)
add_executable(task_182_02 02example/main.cpp)
add_executable(task_182_03 03example/main.cpp)
add_executable(task_182_04 04example/main.cpp)
add_executable(task_182_05 05example/main.cpp)
add_executable(task_182_06 06example/main.cpp)
add_executable(task_182_07 07example/main.cpp)
add_executable(task_182_08 08example/main.cpp)
add_executable(task_182_09 09example/main.cpp)
add_executable(task_182_10 10example/main.cpp)
add_executable(task_182_11 11example/main.cpp)