add_compile_options(-Wpedantic)
add_executable(task_182_01 01example/main.cpp)
add_executable(task_182_02 02example/main.cpp)
add_executable(task_182_03 03example/main.cpp)
add_executable(task_182_04 04example/main.cpp)
add_executable(task_182_05 05example/main.cpp)
add_executable(task_182_06 06example/main.cpp)
add_executable(task_182_07 07example/main.cpp)
add_executable(task_182_08 08example/main.cpp)
add_executable(task_182_09 09example/main.cpp)
add_executable(task_182_10 10example/main.cpp)
add_executable(task_182_11 11example/main.cpp)
add_executable(task_182_12 12example/main.cpp)
add_executable(task_182_13 13example/main.cpp)
add_executable(task_182_14 14example/main.cpp)
add_executable(task_182_15 15example/main.cpp)
add_executable(task_182_16 16example/main.cpp)
add_executable(task_182_17 17example/main.cpp)
add_executable(task_182_18 18example/main.cpp)
add_executable(task_182_19 19example/main.cpp)
add_executable(task_182_20 20example/main.cpp)
add_executable(task_182_21 21example/main.cpp)
add_executable(task_182_22 22example/main.cpp)
add_executable(task_182_23 23example/main.cpp)
add_executable(task_182_24 24example/main.cpp)