add_compile_options(-Wpedantic)
add_executable(task_18_01s 01task/main.cpp 01task/date.cpp)
add_executable(task_18_02s 02task/main.cpp 02task/point.cpp)
add_executable(task_18_03s 03task/main.cpp 03task/point.cpp)
add_executable(task_18_04s 04task/main.cpp)
add_executable(task_18_05s 05task/main.cpp)
add_executable(task_18_06s 06task/main.cpp)
add_executable(task_18_07s 07task/main.cpp)
add_executable(task_18_08s 08task/main.cpp)
add_executable(task_18_09s 09task/main.cpp)